@@ -33,6 +33,7 @@ sunuo (0.3.0) unstable; urgency=low
   * added property Mobile.LastCombatTime
   * added interface IGold
   * optimized memory allocations during world load
+  * World.LoadingType is fed from Entity.GetType().FullName
   * login: use proprietary timestamp format for now
   * login: initialize all columns
   * login: print name of failed game server
